Bug 964976 - Prevent crash of unsupported pixel format gralloc allocation. r=nical